Social Media: Add reddit button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        else {
            document.getElementById('video-background').muted = false;
            document.getElementById("sound").className = "fa fa-volume-up fa-2x";
-           document.getElementById("mute").className = "";
+           document.getElementById("mute").className = "fa-fw";
        }
     }
     </script>
@@ -48,10 +48,10 @@
                 <div class="navbar-collapse collapse" id="bs-navbar">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a class="page-scroll" href="http://looking4group.eu/hellfire/register.php">Sign Up (English)</a>
+                            <a class="page-scroll" href="http://looking4group.eu/hellfire/register.php">Sign Up</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="http://looking4group.eu/hellfire/index.php">Forums (English)</a>
+                            <a class="page-scroll" href="http://looking4group.eu/hellfire/index.php">Forums</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -82,6 +82,7 @@
                         <ul class="social">
                             <li class="fb"><a target="_blank" href="https://www.facebook.com/Looking4Group-1751960458389567/"></a></li>
                             <li class="in"><a target="_blank" href="https://twitter.com/L4Grp"></a></li>
+                            <li class="rd"><a target="_blank" href="https://www.reddit.com/r/HellfireTBC/"></a></li>
                         </ul>
                     </div>
                     <hr>
