Change title & add description meta tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Looking 4 Group Landing Page</title>
+        <title>Looking4Group WoW 2.4.3 TBC Server</title>
+	<meta name="description" content="Your 2.4.3 World of Warcraft (WoW) The Burning Crusade (TBC) Server. The Burning Crusade as it meant to be.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
